428648  s390_emit_load_mem panics due to 20-bit offset for vector load
427400  PPC ISA 3.1 support is missing, part 4
427401  PPC ISA 3.1 support is missing, part 5
384729  __libc_freeres inhibits cross-platform valgrind
427870  lmw, lswi and related PowerPC insns aren't allowed on ppc64le 
427404  PPC ISA 3.1 support is missing, part 6
429692  unhandled ppc64le-linux syscall: 147 (getsid)

Release 3.16.1 (?? June 2020)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

3.16.1 is identical to 3.16.0, except that it fixes the following bug that
was discovered late in the 3.16.0 release process:

422715  valgrind 3.16.0 on 32-bit x86: vex: the `impossible' happened:
        expr_is_guardable: unhandled expr



Release 3.16.0 (27 May 2020)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~

3.16.0 is a feature release with many improvements and the usual collection of
bug fixes.

This release supports X86/Linux, AMD64/Linux, ARM32/Linux, ARM64/Linux,
PPC32/Linux, PPC64BE/Linux, PPC64LE/Linux, S390X/Linux, MIPS32/Linux,
MIPS64/Linux, ARM/Android, ARM64/Android, MIPS32/Android, X86/Android,
X86/Solaris, AMD64/Solaris and AMD64/MacOSX 10.12.  There is also preliminary
support for X86/macOS 10.13, AMD64/macOS 10.13 and nanoMIPS/Linux.

* ==================== CORE CHANGES ===================

* It is now possible to dynamically change the value of many command line
  options while your program (or its children) are running under Valgrind.

  To see the list of dynamically changeable options, run
     "valgrind --help-dyn-options".

  You can change the options from the shell by using vgdb to launch
  the monitor command "v.clo <clo option>...".
  The same monitor command can be used from a gdb connected
  to the valgrind gdbserver.
  Your program can also change the dynamically changeable options using
  the client request VALGRIND_CLO_CHANGE(option).

* ================== PLATFORM CHANGES =================

* MIPS: preliminary support for nanoMIPS instruction set has been added.
